--- a/Michael/Machine_Learning.ipynb
+++ b/Michael/Machine_Learning.ipynb
@@ -351,6 +351,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "propbaly should run factoranalysis.\n",
+    "or dimensionality reductions via principal componet analysis."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 120,
    "metadata": {},
