getting table of trials ready

--- a/Michael/ML_oversampling_noscale.ipynb
+++ b/Michael/ML_oversampling_noscale.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "4         0  unknown           no  2008-05-05  Monday  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "False"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        " 'weekday']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
        "['job', 'marital', 'education', 'contact', 'poutcome', 'weekday']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,14 +717,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\rab_b\\AppData\\Local\\Temp\\ipykernel_16168\\2310923932.py:2: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
+      "C:\\Users\\rab_b\\AppData\\Local\\Temp\\ipykernel_19784\\2310923932.py:2: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
       "  bank_df=bank_df.merge(encode_df,left_index=True,right_index=True).drop(bank_list,1)\n"
      ]
     }
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1122,7 +1122,7 @@
        "[45211 rows x 44 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1134,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1187,7 +1187,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1198,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1230,7 @@
        "Name: subscription, dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1250,7 +1250,7 @@
        "Counter({False: 29924, True: 29924})"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1275,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1289,11 +1289,83 @@
       "Test set metrics:\n",
       "Accuracy: 0.11545607360877642\n",
       "Precision: 0.11545607360877642\n",
-      "Recall: 1.0\n"
+      "Recall: 1.0\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.00      0.00      0.00      9998\n",
+      "        True       0.12      1.00      0.21      1305\n",
+      "\n",
+      "    accuracy                           0.12     11303\n",
+      "   macro avg       0.06      0.50      0.10     11303\n",
+      "weighted avg       0.01      0.12      0.02     11303\n",
+      "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\rab_b\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\Users\\rab_b\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "c:\\Users\\rab_b\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pred_Neg</th>\n",
+       "      <th>Pred_Pos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Actual_Neg</th>\n",
+       "      <td>0</td>\n",
+       "      <td>9998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual_Pos</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1305</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Pred_Neg  Pred_Pos\n",
+       "Actual_Neg         0      9998\n",
+       "Actual_Pos         0      1305"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
     "# Define the logistic regression model\n",
     "log_classifier = LogisticRegression(solver=\"lbfgs\",max_iter=50)\n",
     "\n",
@@ -1312,12 +1384,16 @@
     "print('Test set metrics:')\n",
     "print('Accuracy:', accuracy_score(y_test, y_pred_test)) \n",
     "print('Precision:', precision_score(y_test, y_pred_test)) \n",
-    "print('Recall:', recall_score(y_test, y_pred_test)) "
+    "print('Recall:', recall_score(y_test, y_pred_test)) \n",
+    "\n",
+    "conf_df= pd.DataFrame(confusion_matrix(y_test, y_pred_test), columns =['Pred_Neg','Pred_Pos'] , index=['Actual_Neg', 'Actual_Pos'] )\n",
+    "print(classification_report(y_test, y_pred_test))\n",
+    "conf_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1331,8 +1407,67 @@
       "Test set metrics:\n",
       "Accuracy: 0.8995841811908343\n",
       "Precision: 0.613941018766756\n",
-      "Recall: 0.35095785440613025\n"
+      "Recall: 0.35095785440613025\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.92      0.97      0.94      9998\n",
+      "        True       0.61      0.35      0.45      1305\n",
+      "\n",
+      "    accuracy                           0.90     11303\n",
+      "   macro avg       0.77      0.66      0.70     11303\n",
+      "weighted avg       0.88      0.90      0.89     11303\n",
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pred_Neg</th>\n",
+       "      <th>Pred_Pos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Actual_Neg</th>\n",
+       "      <td>9710</td>\n",
+       "      <td>288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual_Pos</th>\n",
+       "      <td>847</td>\n",
+       "      <td>458</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Pred_Neg  Pred_Pos\n",
+       "Actual_Neg      9710       288\n",
+       "Actual_Pos       847       458"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1353,18 +1488,31 @@
     "print('Test set metrics:')\n",
     "print('Accuracy:', accuracy_score(y_test, y_pred_test)) \n",
     "print('Precision:', precision_score(y_test, y_pred_test)) \n",
-    "print('Recall:', recall_score(y_test, y_pred_test)) "
+    "print('Recall:', recall_score(y_test, y_pred_test)) \n",
+    "\n",
+    "conf_df= pd.DataFrame(confusion_matrix(y_test, y_pred_test), columns =['Pred_Neg','Pred_Pos'] , index=['Actual_Neg', 'Actual_Pos'] )\n",
+    "print(classification_report(y_test, y_pred_test))\n",
+    "conf_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.95      0.95      0.95      9998\n",
+      "        True       0.60      0.58      0.59      1305\n",
+      "\n",
+      "    accuracy                           0.91     11303\n",
+      "   macro avg       0.77      0.77      0.77     11303\n",
+      "weighted avg       0.91      0.91      0.91     11303\n",
+      "\n",
       "Training set metrics:\n",
       "Accuracy: 0.9998830370271354\n",
       "Precision: 0.9997995255437869\n",
@@ -1374,9 +1522,60 @@
       "Precision: 0.5981087470449172\n",
       "Recall: 0.5816091954022988\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pred_Neg</th>\n",
+       "      <th>Pred_Pos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Actual_Neg</th>\n",
+       "      <td>9488</td>\n",
+       "      <td>510</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual_Pos</th>\n",
+       "      <td>546</td>\n",
+       "      <td>759</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Pred_Neg  Pred_Pos\n",
+       "Actual_Neg      9488       510\n",
+       "Actual_Pos       546       759"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "# Create a random forest classifier.\n",
     "rf_model = RandomForestClassifier(n_estimators=25, random_state=1)\n",
     "\n",
@@ -1389,6 +1588,9 @@
     "y_pred_train = rf_model.predict(X_resampled)\n",
     "\n",
     "\n",
+    "conf_df= pd.DataFrame(confusion_matrix(y_test, y_pred_test), columns =['Pred_Neg','Pred_Pos'] , index=['Actual_Neg', 'Actual_Pos'] )\n",
+    "print(classification_report(y_test, y_pred_test))\n",
+    "\n",
     "print('Training set metrics:')\n",
     "print('Accuracy:', accuracy_score(y_resampled, y_pred_train))\n",
     "print('Precision:', precision_score(y_resampled, y_pred_train))\n",
@@ -1397,12 +1599,13 @@
     "print('Test set metrics:')\n",
     "print('Accuracy:', accuracy_score(y_test, y_pred_test)) \n",
     "print('Precision:', precision_score(y_test, y_pred_test)) \n",
-    "print('Recall:', recall_score(y_test, y_pred_test)) "
+    "print('Recall:', recall_score(y_test, y_pred_test)) \n",
+    "conf_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
