--- a/Michael/ML_undersampling_noscale.ipynb
+++ b/Michael/ML_undersampling_noscale.ipynb
@@ -724,7 +724,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\rab_b\\AppData\\Local\\Temp\\ipykernel_21832\\2310923932.py:2: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
+      "C:\\Users\\rab_b\\AppData\\Local\\Temp\\ipykernel_26476\\2310923932.py:2: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
       "  bank_df=bank_df.merge(encode_df,left_index=True,right_index=True).drop(bank_list,1)\n"
      ]
     }
@@ -1350,13 +1350,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.99      0.83      0.90      9998\n",
+      "        True       0.42      0.91      0.57      1305\n",
+      "\n",
+      "    accuracy                           0.84     11303\n",
+      "   macro avg       0.70      0.87      0.74     11303\n",
+      "weighted avg       0.92      0.84      0.86     11303\n",
+      "\n",
       "Training set metrics:\n",
       "Accuracy: 0.9988704819277109\n",
       "Precision: 0.9977460555972952\n",
@@ -1366,9 +1375,69 @@
       "Precision: 0.41587967820916405\n",
       "Recall: 0.9111111111111111\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pred_Neg</th>\n",
+       "      <th>Pred_Pos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Actual_Neg</th>\n",
+       "      <td>8328</td>\n",
+       "      <td>1670</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual_Pos</th>\n",
+       "      <td>116</td>\n",
+       "      <td>1189</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Pred_Neg  Pred_Pos\n",
+       "Actual_Neg      8328      1670\n",
+       "Actual_Pos       116      1189"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "\n",
     "# Create a random forest classifier.\n",
     "rf_model = RandomForestClassifier(n_estimators=25, random_state=1)\n",
     "\n",
@@ -1381,6 +1450,9 @@
     "y_pred_train = rf_model.predict(X_resampled)\n",
     "\n",
     "\n",
+    "conf_df= pd.DataFrame(confusion_matrix(y_test, y_pred_test), columns =['Pred_Neg','Pred_Pos'] , index=['Actual_Neg', 'Actual_Pos'] )\n",
+    "print(classification_report(y_test, y_pred_test))\n",
+    "\n",
     "print('Training set metrics:')\n",
     "print('Accuracy:', accuracy_score(y_resampled, y_pred_train))\n",
     "print('Precision:', precision_score(y_resampled, y_pred_train))\n",
@@ -1389,7 +1461,8 @@
     "print('Test set metrics:')\n",
     "print('Accuracy:', accuracy_score(y_test, y_pred_test)) \n",
     "print('Precision:', precision_score(y_test, y_pred_test)) \n",
-    "print('Recall:', recall_score(y_test, y_pred_test)) "
+    "print('Recall:', recall_score(y_test, y_pred_test)) \n",
+    "conf_df"
    ]
   },
   {
