--- a/Michael/ML_nobin.ipynb
+++ b/Michael/ML_nobin.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +19,13 @@
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.metrics import precision_score\n",
     "from sklearn.metrics import recall_score\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.neighbors import KNeighborsClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +208,7 @@
        "4         0  unknown           no  2008-05-05  Monday  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +230,7 @@
        "False"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +267,7 @@
        "77"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +305,7 @@
        " 'weekday']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +337,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +377,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +425,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +463,7 @@
        "['job', 'marital', 'education', 'contact', 'weekday']"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +490,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +721,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,14 +740,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\rab_b\\AppData\\Local\\Temp\\ipykernel_21084\\2310923932.py:2: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
+      "C:\\Users\\rab_b\\AppData\\Local\\Temp\\ipykernel_4876\\2310923932.py:2: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
       "  bank_df=bank_df.merge(encode_df,left_index=True,right_index=True).drop(bank_list,1)\n"
      ]
     }
@@ -758,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1145,7 @@
        "[45211 rows x 38 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1156,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1204,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1214,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1234,7 +1235,7 @@
        "Name: subscription, Length: 45211, dtype: bool"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1245,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1256,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1266,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,13 +1299,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.92      0.97      0.94      9998\n",
+      "        True       0.60      0.35      0.44      1305\n",
+      "\n",
+      "    accuracy                           0.90     11303\n",
+      "   macro avg       0.76      0.66      0.69     11303\n",
+      "weighted avg       0.88      0.90      0.89     11303\n",
+      "\n",
       "Training set metrics:\n",
       "Accuracy: 0.9011147811725846\n",
       "Precision: 0.6386813186813187\n",
@@ -1314,10 +1324,61 @@
       "Precision: 0.5966494845360825\n",
       "Recall: 0.35478927203065136\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pred_Neg</th>\n",
+       "      <th>Pred_Pos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Actual_Neg</th>\n",
+       "      <td>9685</td>\n",
+       "      <td>313</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual_Pos</th>\n",
+       "      <td>842</td>\n",
+       "      <td>463</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Pred_Neg  Pred_Pos\n",
+       "Actual_Neg      9685       313\n",
+       "Actual_Pos       842       463"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Define the logistic regression model\n",
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
     "log_classifier = LogisticRegression(solver=\"lbfgs\",max_iter=50)\n",
     "\n",
     "# Train the model\n",
@@ -1327,6 +1388,9 @@
     "y_pred_test = log_classifier.predict(X_test_scaled)\n",
     "y_pred_train = log_classifier.predict(X_train_scaled)\n",
     "\n",
+    "conf_df= pd.DataFrame(confusion_matrix(y_test, y_pred_test), columns =['Pred_Neg','Pred_Pos'] , index=['Actual_Neg', 'Actual_Pos'] )\n",
+    "print(classification_report(y_test, y_pred_test))\n",
+    "\n",
     "print('Training set metrics:')\n",
     "print('Accuracy:', accuracy_score(y_train, y_pred_train))\n",
     "print('Precision:', precision_score(y_train, y_pred_train))\n",
@@ -1335,33 +1399,93 @@
     "print('Test set metrics:')\n",
     "print('Accuracy:', accuracy_score(y_test, y_pred_test)) \n",
     "print('Precision:', precision_score(y_test, y_pred_test)) \n",
-    "print('Recall:', recall_score(y_test, y_pred_test)) "
+    "print('Recall:', recall_score(y_test, y_pred_test)) \n",
+    "conf_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Score: 0.9974932169399552\n",
+      "Training Score: 0.9991152530376313\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.93      0.96      0.95      9998\n",
+      "        True       0.62      0.46      0.52      1305\n",
+      "\n",
+      "    accuracy                           0.90     11303\n",
+      "   macro avg       0.77      0.71      0.74     11303\n",
+      "weighted avg       0.89      0.90      0.90     11303\n",
+      "\n",
       "Training set metrics:\n",
-      "Accuracy: 0.9974932169399552\n",
-      "Precision: 0.9961822346653092\n",
-      "Recall: 0.982429718875502\n",
+      "Accuracy: 0.9991152530376313\n",
+      "Precision: 0.9994946942900454\n",
+      "Recall: 0.9929718875502008\n",
       "Test set metrics:\n",
-      "Accuracy: 0.9039193134566045\n",
-      "Precision: 0.6132368148914168\n",
-      "Recall: 0.45440613026819926\n"
+      "Accuracy: 0.9043616738918872\n",
+      "Precision: 0.6161825726141079\n",
+      "Recall: 0.45517241379310347\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pred_Neg</th>\n",
+       "      <th>Pred_Pos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Actual_Neg</th>\n",
+       "      <td>9628</td>\n",
+       "      <td>370</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual_Pos</th>\n",
+       "      <td>711</td>\n",
+       "      <td>594</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Pred_Neg  Pred_Pos\n",
+       "Actual_Neg      9628       370\n",
+       "Actual_Pos       711       594"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a random forest classifier.\n",
-    "rf_model = RandomForestClassifier(n_estimators=15, random_state=1)\n",
+    "rf_model = RandomForestClassifier(n_estimators=25, random_state=1)\n",
     "\n",
     "# Fitting the model\n",
     "rf_model = rf_model.fit(X_train_scaled, y_train)\n",
@@ -1373,6 +1497,8 @@
     "y_pred_test = rf_model.predict(X_test_scaled)\n",
     "y_pred_train = rf_model.predict(X_train_scaled)\n",
     "\n",
+    "conf_df= pd.DataFrame(confusion_matrix(y_test, y_pred_test), columns =['Pred_Neg','Pred_Pos'] , index=['Actual_Neg', 'Actual_Pos'] )\n",
+    "print(classification_report(y_test, y_pred_test))\n",
     "\n",
     "print('Training set metrics:')\n",
     "print('Accuracy:', accuracy_score(y_train, y_pred_train))\n",
@@ -1382,12 +1508,118 @@
     "print('Test set metrics:')\n",
     "print('Accuracy:', accuracy_score(y_test, y_pred_test)) \n",
     "print('Precision:', precision_score(y_test, y_pred_test)) \n",
-    "print('Recall:', recall_score(y_test, y_pred_test)) "
+    "print('Recall:', recall_score(y_test, y_pred_test)) \n",
+    "conf_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.90      0.98      0.94      9998\n",
+      "        True       0.56      0.19      0.28      1305\n",
+      "\n",
+      "    accuracy                           0.89     11303\n",
+      "   macro avg       0.73      0.59      0.61     11303\n",
+      "weighted avg       0.86      0.89      0.86     11303\n",
+      "\n",
+      "Training set metrics:\n",
+      "Accuracy: 0.9271853249970509\n",
+      "Precision: 1.0\n",
+      "Recall: 0.3802710843373494\n",
+      "Test set metrics:\n",
+      "Accuracy: 0.8894983632663894\n",
+      "Precision: 0.5639269406392694\n",
+      "Recall: 0.189272030651341\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pred_Neg</th>\n",
+       "      <th>Pred_Pos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Actual_Neg</th>\n",
+       "      <td>9807</td>\n",
+       "      <td>191</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual_Pos</th>\n",
+       "      <td>1058</td>\n",
+       "      <td>247</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Pred_Neg  Pred_Pos\n",
+       "Actual_Neg      9807       191\n",
+       "Actual_Pos      1058       247"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a random forest classifier.\n",
+    "knn_model = KNeighborsClassifier(n_neighbors=2, weights='uniform',leaf_size=15)\n",
+    "\n",
+    "# Fitting the model\n",
+    "knn_model = knn_model.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "y_pred_test = knn_model.predict(X_test_scaled)\n",
+    "y_pred_train = knn_model.predict(X_train_scaled)\n",
+    "\n",
+    "conf_df= pd.DataFrame(confusion_matrix(y_test, y_pred_test), columns =['Pred_Neg','Pred_Pos'] , index=['Actual_Neg', 'Actual_Pos'] )\n",
+    "print(classification_report(y_test, y_pred_test))\n",
+    "\n",
+    "print('Training set metrics:')\n",
+    "print('Accuracy:', accuracy_score(y_train, y_pred_train))\n",
+    "print('Precision:', precision_score(y_train, y_pred_train))\n",
+    "print('Recall:', recall_score(y_train, y_pred_train))\n",
+    "\n",
+    "print('Test set metrics:')\n",
+    "print('Accuracy:', accuracy_score(y_test, y_pred_test)) \n",
+    "print('Precision:', precision_score(y_test, y_pred_test)) \n",
+    "print('Recall:', recall_score(y_test, y_pred_test)) \n",
+    "conf_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
